compiler/tests/success/common/bug_870.jazz
export
fn rand(reg ptr u8[32] io) -> reg ptr u8[32] {
  io = #randombytes(io);
  return io;
}
