compiler/tests/fail/warning/x86-64/reg_const_ptr.jazz
fn f (reg const ptr u64[3] r) -> reg ptr u64[3] {
  return r;
}
